--- a/app/src/main/res/layout/activity_section_wsg2.xml
+++ b/app/src/main/res/layout/activity_section_wsg2.xml
@@ -54,11 +54,6 @@
                     android:id="@+id/fldGrpCVws201"
                     style="@style/cardView">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -72,20 +67,20 @@
                                 android:text="@string/Q_ws201" />
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="180dp"
                                 android:layout_height="match_parent"
                                 android:text="@string/ws201" />
 
+                            <EditText
+                                android:id="@+id/ws201"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:hint="@string/ws201"
+                                android:text="@={wsg.ws201}" />
+
                         </LinearLayout>
-
-                        <EditText
-                            android:id="@+id/ws201"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/ws201"
-                            android:text="@={wsg.ws201}" />
-
-                    </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
 
