--- a/app/src/main/res/layout/activity_section_wsg2.xml
+++ b/app/src/main/res/layout/activity_section_wsg2.xml
@@ -67,8 +67,9 @@
                                 android:text="@string/Q_ws201" />
 
                             <TextView
-                                android:layout_width="180dp"
+                                android:layout_width="200dp"
                                 android:layout_height="match_parent"
+                                android:gravity="center"
                                 android:text="@string/ws201" />
 
                             <EditText
@@ -90,11 +91,6 @@
                     android:id="@+id/fldGrpCVws202"
                     style="@style/cardView">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -108,20 +104,21 @@
                                 android:text="@string/Q_ws202" />
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="200dp"
                                 android:layout_height="match_parent"
+                                android:gravity="center"
                                 android:text="@string/ws202" />
 
+                            <EditText
+                                android:id="@+id/ws202"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:hint="@string/ws202"
+                                android:text="@={wsg.ws202}" />
+
                         </LinearLayout>
-
-                        <EditText
-                            android:id="@+id/ws202"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/ws202"
-                            android:text="@={wsg.ws202}" />
-
-                    </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
 
