--- a/app/src/main/res/layout/activity_section_vhc2.xml
+++ b/app/src/main/res/layout/activity_section_vhc2.xml
@@ -151,6 +151,7 @@
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
+                                android:onCheckedChanged="@{()-> v204.clearCheck() + v205.clearCheck()}"
                                 android:orientation="horizontal">
 
                                 <RadioButton
@@ -178,169 +179,177 @@
                 </androidx.cardview.widget.CardView>
 
 
-                <!-- v204  Radio   -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/fldGrpCVv204"
-                    style="@style/cardView">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/bottom"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                style="@style/quesNum"
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:text="@string/Q_v204" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="@string/v204" />
-
-                        </LinearLayout>
-
-                        <RadioGroup
-                            android:id="@+id/v204"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <RadioButton
-                                android:id="@+id/v204a"
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="1"
-                                android:checked="@{vhc.v204.equals(`1`)}"
-                                android:onClick="@{()->vhc.setV204(`1`)}"
-                                android:text="@string/v204a" />
-
-                            <RadioButton
-                                android:id="@+id/v204b"
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="1"
-                                android:checked="@{vhc.v204.equals(`2`)}"
-                                android:onClick="@{()->vhc.setV204(`2`)}"
-                                android:text="@string/v204b" />
-
-                        </RadioGroup>
-
-                    </LinearLayout>
-
-                </androidx.cardview.widget.CardView>
+                <LinearLayout
+                    android:id="@+id/llv203"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="@{vhc.v203.equals(`2`) ? View.GONE : View.VISIBLE}">
 
 
-                <!-- v205  Radio   -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/fldGrpCVv205"
-                    style="@style/cardView">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                    <!-- v204  Radio   -->
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/fldGrpCVv204"
+                        style="@style/cardView">
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/bottom"
-                            android:orientation="horizontal">
+                            android:orientation="vertical">
 
-                            <TextView
-                                style="@style/quesNum"
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:text="@string/Q_v205" />
-
-                            <TextView
+                            <LinearLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="@string/v205" />
+                                android:layout_height="wrap_content"
+                                android:background="@drawable/bottom"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    style="@style/quesNum"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:text="@string/Q_v204" />
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:text="@string/v204" />
+
+                            </LinearLayout>
+
+                            <RadioGroup
+                                android:id="@+id/v204"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
+                                <RadioButton
+                                    android:id="@+id/v204a"
+                                    android:layout_width="0dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="1"
+                                    android:checked="@{vhc.v204.equals(`1`)}"
+                                    android:onClick="@{()->vhc.setV204(`1`)}"
+                                    android:text="@string/v204a" />
+
+                                <RadioButton
+                                    android:id="@+id/v204b"
+                                    android:layout_width="0dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="1"
+                                    android:checked="@{vhc.v204.equals(`2`)}"
+                                    android:onClick="@{()->vhc.setV204(`2`)}"
+                                    android:text="@string/v204b" />
+
+                            </RadioGroup>
 
                         </LinearLayout>
 
-                        <RadioGroup
-                            android:id="@+id/v205"
+                    </androidx.cardview.widget.CardView>
+
+
+                    <!-- v205  Radio   -->
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/fldGrpCVv205"
+                        style="@style/cardView">
+
+                        <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
 
-                            <RadioButton
-                                android:id="@+id/v205a"
+                            <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:checked="@{vhc.v205.equals(`1`)}"
-                                android:onClick="@{()->vhc.setV205(`1`)}"
-                                android:text="@string/v205a" />
+                                android:background="@drawable/bottom"
+                                android:orientation="horizontal">
 
-                            <RadioButton
-                                android:id="@+id/v205b"
+                                <TextView
+                                    style="@style/quesNum"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:text="@string/Q_v205" />
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:text="@string/v205" />
+
+                            </LinearLayout>
+
+                            <RadioGroup
+                                android:id="@+id/v205"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:checked="@{vhc.v205.equals(`2`)}"
-                                android:onClick="@{()->vhc.setV205(`2`)}"
-                                android:text="@string/v205b" />
+                                android:layout_height="wrap_content">
 
-                            <RadioButton
-                                android:id="@+id/v205c"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:checked="@{vhc.v205.equals(`3`)}"
-                                android:onClick="@{()->vhc.setV205(`3`)}"
-                                android:text="@string/v205c" />
+                                <RadioButton
+                                    android:id="@+id/v205a"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:checked="@{vhc.v205.equals(`1`)}"
+                                    android:onClick="@{()->vhc.setV205(`1`)}"
+                                    android:text="@string/v205a" />
 
-                            <RadioButton
-                                android:id="@+id/v205d"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:checked="@{vhc.v205.equals(`4`)}"
-                                android:onClick="@{()->vhc.setV205(`4`)}"
-                                android:text="@string/v205d" />
+                                <RadioButton
+                                    android:id="@+id/v205b"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:checked="@{vhc.v205.equals(`2`)}"
+                                    android:onClick="@{()->vhc.setV205(`2`)}"
+                                    android:text="@string/v205b" />
 
-                            <RadioButton
-                                android:id="@+id/v205e"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:checked="@{vhc.v205.equals(`5`)}"
-                                android:onClick="@{()->vhc.setV205(`5`)}"
-                                android:text="@string/v205e" />
+                                <RadioButton
+                                    android:id="@+id/v205c"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:checked="@{vhc.v205.equals(`3`)}"
+                                    android:onClick="@{()->vhc.setV205(`3`)}"
+                                    android:text="@string/v205c" />
 
-                            <RadioButton
-                                android:id="@+id/v20596"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:checked="@{vhc.v205.equals(`96`)}"
-                                android:onClick="@{()->vhc.setV205(`96`)}"
-                                android:text="@string/v20596" />
+                                <RadioButton
+                                    android:id="@+id/v205d"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:checked="@{vhc.v205.equals(`4`)}"
+                                    android:onClick="@{()->vhc.setV205(`4`)}"
+                                    android:text="@string/v205d" />
 
-                            <EditText
-                                android:id="@+id/v20596x"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
-                                android:hint="@string/v20596"
-                                android:tag="v20596"
-                                android:text="@={vhc.v20596x}"
-                                android:visibility='@{v20596.checked? View.VISIBLE : View.GONE}' />
+                                <RadioButton
+                                    android:id="@+id/v205e"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:checked="@{vhc.v205.equals(`5`)}"
+                                    android:onClick="@{()->vhc.setV205(`5`)}"
+                                    android:text="@string/v205e" />
 
-                        </RadioGroup>
+                                <RadioButton
+                                    android:id="@+id/v20596"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:checked="@{vhc.v205.equals(`96`)}"
+                                    android:onClick="@{()->vhc.setV205(`96`)}"
+                                    android:text="@string/v20596" />
 
-                    </LinearLayout>
+                                <EditText
+                                    android:id="@+id/v20596x"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
+                                    android:hint="@string/v20596"
+                                    android:tag="v20596"
+                                    android:text="@={vhc.v20596x}"
+                                    android:visibility="@{vhc.v205.equals(`96`) ? View.VISIBLE : View.GONE}" />
 
-                </androidx.cardview.widget.CardView>
+                            </RadioGroup>
+
+                        </LinearLayout>
+
+                    </androidx.cardview.widget.CardView>
 
 
-                <!-- v206  Input-Numeric   -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/fldGrpCVv206"
-                    style="@style/cardView">
+                    <!-- v206  Input-Numeric   -->
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/fldGrpCVv206"
+                        style="@style/cardView">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -376,7 +385,10 @@
 
                         </LinearLayout>
 
-                </androidx.cardview.widget.CardView>
+                    </androidx.cardview.widget.CardView>
+
+
+                </LinearLayout>
 
 
                 <!--EndButton LinearLayout-->
