--- a/app/src/main/res/layout/activity_section_wsg42.xml
+++ b/app/src/main/res/layout/activity_section_wsg42.xml
@@ -40,7 +40,8 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp">
 
 
             <LinearLayout
