--- a/app/src/main/res/layout/activity_section_a.xml
+++ b/app/src/main/res/layout/activity_section_a.xml
@@ -12,7 +12,7 @@
 
         <variable
             name="callback"
-            type="edu.aku.hassannaqvi.chese.ui.sections.SectionAActivity" />
+            type="edu.aku.hassannaqvi.chese.ui.sections.SectionLHWActivity" />
 
     </data>
 
